--- a/index.ipynb
+++ b/index.ipynb
@@ -336,16 +336,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7f1553e0dcc0>"
+       "<folium.map.Marker at 0x7f1fb92f57f0>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
